www/custom.css
#submit_sign_out {
  font-weight: bold;
  /*background-color: red;
  color:white;
  */
}

#coc_versions_dt {
  height:100% !important; 
}

/*show red circle for disabled buttons*/
.btn:has(.disabled) {
  cursor: not-allowed;
}

/*Disallow clicking on disabled/calculated cells*/
td.disabled {
  pointer-events: none;
  background-color: lightgray;
}

.hidden {
  display: none;
}

/*CUSTOMIZE RATING CRITERIA*/
/*
[id*="_main_accordion"] .accordion-button {
  font-size: 1em;
}
[id*="_sub_accordion"] .accordion-button {
  font-size: 0.8em;
}*/

/*FUNDING PRIORITIES*/
/*
#funding_priorities-priorities_table table.dataTable th, 
#funding_priorities-priorities_table table.dataTable td {
  text-align:center;
}*/

#inventory-projects_table .dataTables_scrollBody {
  height: 36vh !important;
}


/* Add to your app's CSS */
/* Center align the input boxes too */
.input-col .form-group {
  text-align: center;
}
.input-col input {
  text-align: center;
}


/* Alternative Rating*/
#rating-alternative-alternative_rating_table .dt-buttons {
  display: none;
}
#rating-alternative-alternative_rating_table .dataTables_scrollBody {
  height: 46vh !important;
}



/* Fix In-App Rating Sidebar */
#rating-renew-project_selection_sidebar, 
#rating-new-project_selection_sidebar,
#rating-customize_criteria-renewal_rating_factors-sidebar,
#rating-customize_criteria-new_rating_factors-sidebar {
  position: sticky; 
  top: 0; 
  height: 100vh;
}

